Update script path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <script src="https://dev-cdn.adnz.co/bta-feed/index.html"></script>
+    <script src="https://dev-cdn.adnz.co/bta-feed/index.js"></script>
     <script type="text/javascript">
       window.adnzBtaFeed.start({
         btaFeedId: '92692c82-cb38-4164-b77c-e89d56cb486d',
