Update init script

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <base target="_parent" />
     <meta charset="UTF-8" />
+    <script src="https://dev-cdn.adnz.co/bta-feed/index.js"></script>
   </head>
 
   <body>
-    <script src="https://dev-cdn.adnz.co/bta-feed/index.js"></script>
+    <div id="bta-feed-root"></div>
     <script type="text/javascript">
       window.adnzBtaFeed.start({
         btaFeedId: '92692c82-cb38-4164-b77c-e89d56cb486d',
         mockRecommendations: true,
+        element: document.getElementById('bta-feed-root'),
       });
     </script>
   </body>
