Add required SEO elements

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <base target="_parent" />
     <meta charset="UTF-8" />
     <script src="https://dev-cdn.adnz.co/bta-feed/index.js"></script>
+    <title>BTA Feed test</title>
+    <meta name="description" content="Test page with BTA Feed">
   </head>
 
   <body>
+    <h1>BTA Feed test</h1>
     <div id="bta-feed-root"></div>
     <script type="text/javascript">
       window.adnzBtaFeed.start({
